ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uhluserver
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - uhluscout.com
    secretName: uhluserver-tls
  rules:
  - host: uhluscout.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: uhlusvc
          servicePort: 80
